Настройка репозитория и локальный запуск проекта

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,8 @@ poetry = "^1.8.5"
 alembic = "^1.14.0"
 uvicorn = "^0.33.0"
 httpx = "^0.28.1"
+mypy = "^1.14.0"
+typer = "^0.15.1"
 
 
 [build-system]
